[project]
name = "crypt-tools"
version = "0.1.0"
description = "Crypt Tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pycryptodome>=3.21.0",
    "ruff>=0.7.4",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "taskipy>=1.14.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = "."


[tool.taskipy.tasks]
check = "ruff check ."
diff = "ruff format --diff ."
format = "ruff format ."
test = "pytest -v"
